--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -25,7 +25,11 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
 
-      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          Write-Host '12345'
+        shell: powershell
+
       - name: Run a multi-line script
         run: |
           Write-Host '12345'
