--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,6 +27,11 @@ jobs:
 
       - name: Run a multi-line script
         run: |
+          $PSVersionTable
+        shell: powershell
+
+      - name: Run a multi-line script
+        run: |
           Write-Host '12345'
         shell: powershell
 
