--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,14 +28,14 @@ jobs:
       - name: Run a multi-line script
         run: |
           $PSVersionTable
-        shell: powershell
+        shell: pwsh
 
       - name: Run a multi-line script
         run: |
           Write-Host '12345'
-        shell: powershell
+        shell: pwsh
 
       - name: Run a multi-line script
         run: |
           Write-Host '12345'
-        shell: powershell
+        shell: pwsh
